update setup command to remove the old origin

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,6 @@
+//  imports
 @import 'components';
 @import 'core';
 @import 'layout';
+
+// for more info about scss file structure visit https://www.webdesignerdepot.com/2020/12/2-smartest-ways-to-structure-sass/
